Fix some ugly font rendering on firefox

--- a/src/stylus/how.styl
+++ b/src/stylus/how.styl
@@ -21,7 +21,7 @@
 
 	.steps {
 		position: relative;
-		font-weight: bold;
+		font-weight: normal;
 		margin-top: 50px;
 		padding-left: 0;
 
